--- a/app/src/main/res/layout-w600dp/activity_main.xml
+++ b/app/src/main/res/layout-w600dp/activity_main.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/frame_layout_main"
-        android:layout_weight="30"
-        android:layout_width="0px"
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout"
+    tools:openDrawer="start"
+    tools:context="com.example.realestatemanager.MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
-    <FrameLayout
-        android:id="@+id/frame_layout_detail"
-        android:layout_weight="70"
-        android:layout_width="0px"
-        android:layout_height="match_parent"
-        />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:id="@+id/frame_layout_main_list"
+                android:layout_weight="30"
+                android:layout_width="0px"
+                android:layout_height="match_parent">
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frame_layout_main_detail"
+                android:layout_weight="70"
+                android:layout_width="0px"
+                android:layout_height="match_parent">
+            </FrameLayout>
+
+        </LinearLayout>
+
+   </LinearLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/main_activity_nav_header"
+            app:menu="@menu/main_activity_drawer_menu"
+            app:itemIconTint="#000000"
+            android:fitsSystemWindows="true"/>
+
+
+
+    </androidx.drawerlayout.widget.DrawerLayout>
