--- a/app/src/main/res/layout/dialog_add_interest.xml
+++ b/app/src/main/res/layout/dialog_add_interest.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             app:hintEnabled="true"
             android:textSize="12sp"
+            android:maxLines="1"
             android:hint="Name"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,6 +53,7 @@
                     android:layout_height="wrap_content"
                     app:hintEnabled="true"
                     android:textSize="12sp"
+                    android:maxLines="1"
                     android:inputType="number"
                     android:hint="Number"/>
 
@@ -72,6 +74,7 @@
                     android:layout_height="wrap_content"
                     app:hintEnabled="true"
                     android:textSize="12sp"
+                    android:maxLines="1"
                     android:hint="Street name"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -96,6 +99,7 @@
             android:layout_height="wrap_content"
             app:hintEnabled="true"
             android:textSize="12sp"
+            android:maxLines="1"
             android:hint="Postal code"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -116,6 +120,7 @@
                 android:layout_height="wrap_content"
                 app:hintEnabled="true"
                 android:textSize="12sp"
+                android:maxLines="1"
                 android:hint="City"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -136,6 +141,7 @@
             android:layout_height="wrap_content"
             app:hintEnabled="true"
             android:textSize="12sp"
+            android:maxLines="1"
             android:hint="Country"/>
 
     </com.google.android.material.textfield.TextInputLayout>
