--- a/app/src/main/res/layout/dialog_change_user_name.xml
+++ b/app/src/main/res/layout/dialog_change_user_name.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             app:hintEnabled="true"
             android:textSize="12sp"
+            android:maxLines="1"
             android:hint="Last name"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 app:hintEnabled="true"
                 android:textSize="12sp"
+                android:maxLines="1"
                 android:hint="First name"/>
 
         </com.google.android.material.textfield.TextInputLayout>
