--- a/app/src/main/res/layout/main_activity_nav_header.xml
+++ b/app/src/main/res/layout/main_activity_nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/blue"
     android:id="@+id/drawer_layout"
     android:gravity="center"
     android:orientation="vertical">
