--- a/app/src/main/res/layout/photo_recycler_view_item.xml
+++ b/app/src/main/res/layout/photo_recycler_view_item.xml
@@ -1,6 +1,8 @@
 <LinearLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
