--- a/app/src/main/res/layout-w600dp/fragment_detail.xml
+++ b/app/src/main/res/layout-w600dp/fragment_detail.xml
@@ -35,9 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -50,10 +47,10 @@
                 android:src="@drawable/ic_edit_white"
                 android:clickable="true"
                 android:layout_margin="20dp"
-                android:layout_gravity="bottom|right"
+                android:layout_alignRight="@+id/recycler_view_detail_photos"
+                android:layout_alignBottom="@+id/recycler_view_detail_photos"
+                android:layout_gravity="bottom|end"
                 android:focusable="true" />
-
-        </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_detail_photos"
@@ -450,6 +447,28 @@
             </LinearLayout>
 
         <!--add interests here-->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.4dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Interests near this place :"
+            android:textStyle="bold"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_detail_interest_detail_fragment_tablet_mode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
     </ScrollView>
