--- a/app/src/main/res/layout/interests_checkboxes.xml
+++ b/app/src/main/res/layout/interests_checkboxes.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:text="Add interests near this place :" />
+        android:text="@string/interests_title" />
 
 </LinearLayout>
 
