--- a/app/src/main/res/layout/max_min_text_input_layout.xml
+++ b/app/src/main/res/layout/max_min_text_input_layout.xml
@@ -13,6 +13,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
             android:textSize="12sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -26,6 +27,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
             android:textSize="12sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
